--- a/0705.css
+++ b/0705.css
@@ -1,73 +1,98 @@
 *{
     box-sizing: border-box;
     margin: 0 auto;
-    color: rgb(49, 49, 49);
+    color: rgba(102,102,102,1);
+}
+/* nav */
+.color{
+    max-width: 1400px;
+    height: 5px;
+    width: 100%;
+    background: linear-gradient(to right, rgb(78, 144, 231), rgb(117, 238, 202));
 }
 .nav{
+    max-width: 1400px;
     display: flex;
-    margin: auto;
-    max-width: 1500px;
+    margin: 0 auto;
     width: 100%;
     overflow: hidden;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 1px 1px 5px 1px rgb(190, 190, 190);
+    box-shadow: 1px 1px 5px 1px rgba(211,211,211,1);
 }
-.logo{
-    float: left;
-    width: 15%;
+.nav__div__logo{
+    max-width: 200px;
     padding: 10px;
+    margin: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-decoration: none;
 }
-.menu{
+.nav__div__logo__img{
+    width:100%;
+}
+#switch{
+    display: none;
+}
+.nav__menu{
     float: right;
     list-style: none;
     padding: 10px;
     margin: auto;
 }
-.menu-item,.footer-item{
+.nav__menu__item,.footer-item{
     line-height: 40px;
     display: inline-flex;
 }
-.nav-link{
+.nav__menu__item__link{
     text-decoration: none;
+}
+.nav__menu__item__span{
     color: gray;
     padding:  0 10px;
-    border-right: 1px solid rgb(192, 192, 192);
+    border-right: 1px solid rgba(211,211,211,1);
 }
-.icon{
+.nav__menu__item__icon{
     margin: 0 auto;
     position: relative;
     top: 5px;
 }
-.logo>span,.footer-item>span{
-    color:white;
+.nav__menu__item__icon__img{
+    width: 24px;
 }
-.change{
-    transform: rotate(180deg);
+.nav__div__s-menu{
+    display: none;
 }
+/* header */
 .header{
+    max-width: 1400px;
     background-image: url("img/img.jpeg");
     background-repeat: round;
     background-size: contain;
-    padding: 10% 20%;
-    margin: 3px 0 0 0 ;
+    padding: 0 15%;
+    margin: 0 auto;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
-.text>h1{
+.header__text{
+    margin: 0;
+}
+.header__text__h1{
     font-size: 3.5rem;
-    color:rgb(63, 153, 238)
+    color:rgba(0,137,209,1);
 }
-.text>h3{
-    font-size: 2.5rem;
+.header__text__p{
+    font-size: 45px;
     font-weight: 200;
-    color:rgb(255, 255, 255)
+    /* color:rgba(51,51,51,1); */
+    color: white;
 }
-.container>.button{
-    border: 1px solid rgb(192, 192, 192);
+.header__container{
+    margin: 0;
+}
+.header__container__button{
+    border: 1px solid rgb(124, 123, 123);
     border-radius: 50px;
     background-color: white;
     color: black;
@@ -76,49 +101,128 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 30px 10px;
+    margin: 30px 4px;
     text-align: center;
     justify-content: center;
-    padding: 10px;
+    padding: 8px;
 }
-.button>span{
+.header__container__button__img{
+    width: 25%;
+}
+.header__container__button__span{
     margin: 0 20px 0 0;
+    font-weight: 100;
+    font-size: x-small;
+    margin: 0;
+    color: rgba(96,96,96,1);
 }
-.footer{
+.header__container__button__span--b{
+    color: rgba(96,96,96,1);
+    font-weight: bold;
+}
+
+.header__container{
     display: flex;
-    text-align: center;
+}
+/* content */
+
+.content{
+    max-width: 1400px;
+    margin-top: -40px;
+    
+}
+.content__row1{
+    display: flex;
+    margin-bottom: 50px;
+    padding: 0px 10%;
+}
+.content__row1__div{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border:1px solid rgb(192, 192, 192);
+    height: 90px;
+    width: 300px;
+    border-radius: 50px;
     justify-content: center;
     align-items: center;
-    background: rgb(121, 121, 121);
+    background: linear-gradient(to bottom, rgba(252,252,252,1), rgba(209,238,255,1));
+    box-shadow: 2px 4px 6px 0px rgba(192, 192, 192, 0.527);
+    padding: 5px;
 }
-.footer-nav{
-    list-style: none;
-    padding: 50px;
-    margin: auto;
-    color: white;
-    font-size: 12px;
+.content__row1__div__img{
+    padding: 0 6%;
+    border-right: 1px dotted gray;
+
 }
-.footer-nav>span{
-    color:white;
+.content__row2{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 20px 200px ;
 }
-.footer-link{
-    text-decoration: none;
-    color: white;
-    padding:  0 20px;
-    border-right: 1px solid gray;
+.content__row2__h2{
+    color:rgba(51,51,51,1);
 }
-.container{
+.content__row2__p,.content__row2__div__text__p{
+    color:rgba(102,102,102,1);
+}
+.content__row2__div{
     display: flex;
+    width: 100%;
+    align-items: center;
+    border:1px solid rgba(207,207,207,1);
+    border-radius: 10px;
+    margin: 20px 0;
+    background: rgba(236,248,255,1);
 }
-.Fixbutton{
+.content__row2__div__img{
+    border-radius: 10px;
+    margin: 0;
+    width: 45%;
+}
+.content__row2__div__text{
+    padding: 0 50px;
+}
+hr{
+    width: 50px;
+    margin: 10px auto;
+}
+.ccontent__row2__div__text__h3{
+    
+    margin-bottom: 10px;
+}
+.content__row3{
+    padding: 0 200px 50px 200px;
+    
+}
+.content__row3__h3{
+    text-align: center;
+    padding: 0 0 10px 0;
+    color: rgba(51,51,51,1);
+}
+.content__row3__h3__img{
+    transform: rotate(180deg);
+    width: 2%;
+}
+.content__row3__h3__img--reverse{
+    transform: rotate(0deg);
+}
+.content__row3__ol{
+    display: none;
+}
+.content__row3__ol__li{
+    color: rgba(102,102,102,1);
+    margin: 5px 0;
+}
+
+/* 右方三button */
+.content__fixbutton{
     position: fixed;
     left: 90%;
-    top:50%;
+    bottom:10%;
 }
-.Top{
+.content__fixbutton__top{
     margin: 0.3rem;
     background-color: white;
     color: black;
@@ -131,206 +235,179 @@
     font-size: 0.1rem;
     min-width: 86px;
 }
-hr{
-    width: 50px;
-    margin: 10px auto;
+.content__fixbutton__top--up{
+    background: rgba(255, 255, 255, 0);
+    border: none;
+    box-shadow: none;
+    color: rgba(155,155,155,1);
 }
-.row-1{
+/* footer */
+.footer{
+    max-width: 1400px;
     display: flex;
-    margin-bottom: 50px;
-    padding: 0px 10%;
+    text-align: center;
+    background: rgba(124,124,124,1);
+    height: 136px;
 }
-.rowcontent{
+.footer__nav__item__span{
+    color:white;
+}
+.footer__nav{
+    list-style: none;
+    margin: auto;
+    color: white;
+    font-size: 14px;
+    padding: 0;
+}
+.footer__nav__item{
+    display: inline-flex;
+}
+.footer__nav__span{
+    color:white;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    border:1px solid rgb(192, 192, 192);
-    box-shadow: 1px 3px 6px 0px rgba(192, 192, 192, 0.527);
-    height: 90px;
-    width: 300px;
-    border-radius: 50px;
     justify-content: center;
-    align-items: center;
-    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(194, 223, 255));
-    box-shadow: 2px 4px 6px 0px rgba(192, 192, 192, 0.527);
-    padding: 5px;
 }
-.rowcontent>img{
-    padding: 0 6%;
-    border-right: 1px dotted gray;
+.footer__nav__item__link{
+    text-decoration: none;
 
 }
-.content{
-    margin-top: -40px;
-}
-.row-2{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px 200px ;
-}
-.row-2>p,.row2text>span{
-    color:gray;
-}
-.row2content{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    border:1px solid rgb(192, 192, 192);
-    border-radius: 10px;
-    margin: 20px 0;
-    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(211, 232, 255));
-
-}
-.row2content>img{
-    border-radius: 10px;
-    margin: 0;
-}
-.row2text{
-    padding: 0 50px;
+.footer__nav__item__span{
+    color: white;
+    padding:  0 16px;
+    border-right: 1px solid #DDDDDD;
 }
 
-.row2text>h3{
-    
-    margin-bottom: 10px;
-}
-.row-3{
-    padding: 0 200px 50px 200px;
-    
-}
-.row-3>h1{
-    text-align: center;
-    padding: 0 0 10px 0;
-}
-.row-3>ol>li{
-    color: rgb(192, 192, 192);
-    margin: 5px 0;
-}
-.sm-menu{
-    display: none;
-}
 @media screen and (max-width:990px){
+    .nav__div__s-menu{
+        display: none;
+    }
+    .nav__menu{
+        display: flex;
+    }
     .header{
         padding: 50px 100px;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
     }
-    .text>p{
+    .header__text__h1{
         font-size: 2.5rem;
     }
-    .text>h3{
+    .header__text__p{
         font-size: 1.5rem;
     }
-    .container{
+    .header__container{
         flex-direction: row;
         margin: 10px;
     }
-    .row-1{
+    .content__row1{
         align-items: center;
     }
-    .rowcontent{
+    .content__row1__div{
          margin: 5px 0;
     }
-    .Fixbutton{
+    .content__row2{
+        padding: 5px 50px ;
+    }
+    .content__row3{
+        padding: 5px 50px ;
+    }
+    .content__fixbutton{
         left: 85%;
     }
-    .row-2{
-        padding: 5px 50px ;
-    }
-    .row-3{
-        padding: 5px 50px ;
-    }
-    .sm-menu{
-        display: none;
-    }
-    .menu{
-        display: flex;
-    }
+
 }
 @media screen and (max-width:768px) {
-    .header{
-        padding: 5% 5%;
+    .nav{
+        display: block;
     }
-    .text>p{
-        font-size: 2.5rem;
-    }
-    .text>h3{
-        font-size: 1.5rem;
-    }
-    .container{
-        flex-direction: row;
-        margin: 10px;
-    }
-    .container>.button{
-        margin: 0 5px;
-        height: 55px;
-    }
-    .row-1{
-        flex-direction: column;
-        align-items: center;
-    }
-    .rowcontent{
-        margin: 5px 0;
-    }
-    .content{
-        margin-top: 0px;
-    }
-    .Fixbutton{
-        left: 70%;
-    }
-    .row-2{
-        padding: 5px 50px ;
-    }
-    .row2content{
-        flex-direction: column;
-    }
-    .row2content>img{
-        width: 100%;
-    }
-    .active2{
-        flex-direction: column-reverse;
-    }
-    .row2text {
-        padding: 5px 10px;
-    }
-    .row-3{
-        padding: 5px 50px ;
-    }
-    .menu{
+    .nav__menu{
         float: none;
         overflow: hidden;
         display: flex;
         flex-direction: column;
         max-height: 0;
     }
-    .sm-menu{
+    .nav__menu__item__link{
+        border: none;
+    }
+    .nav__menu__item__span{
+        border: none;
+    }
+    .nav__div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .nav__div__s-menu{
         display: flex;
         margin: 0 5%;
     }
-    .sm-menu>img{
-        width: 60%;
-    }
-    .change{
-        width: 8%;
-    }
-    .nav{
-        flex-wrap: wrap;
-    }
-    .nav-link{
-        border: none;
-    }
-    label {
-        cursor: pointer;
-    }
-    input:checked ~ .menu {
-        max-height: 300px;
-    }
-    .logo{
+    .nav__div__logo{
         width: 40%;
         margin: 0 20% 0 5%;
+    }
+    .nav__div__s-menu__img{
+        width: 60%;
+    }
+    .nav__div__s-menu {
+        cursor: pointer;
+    }
+    input:checked ~ .nav__menu {
+        max-height: 300px;
+    }
+    .header{
+        padding: 5% 5%;
+    }
+    .header__text__h1{
+        font-size: 2.5rem;
+    }
+    .header__text__p{
+        font-size: 1.5rem;
+    }
+    .header__container{
+        flex-direction: row;
+        margin: 10px;
+    }
+    .header__container__button{
+        margin: 0 5px;
+        height: 55px;
+    }
+    .content{
+        margin-top: 0px;
+    }
+    .content__row1{
+        flex-direction: column;
+        align-items: center;
+    }
+    .content__row1__div{
+        margin: 5px 0;
+    }
+    .content__row2{
+        padding: 5px 50px ;
+    }
+    .content__row2__div{
+        flex-direction: column;
+    }
+    .content__row2__div__img{
+        width: 100%;
+    }
+    .content__row2__div2{
+        flex-direction: column-reverse;
+    }
+    .content__row2__div__text{
+        padding: 5px 10px;
+    }
+    .content__row3{
+        padding: 5px 50px ;
+    }
+
+    .content__row3__h3__img{
+        width: 8%;
+    }
+    .content__fixbutton{
+        left: 70%;
     }
 }
   
