--- a/0705.css
+++ b/0705.css
@@ -325,7 +325,7 @@ hr{
     .nav__menu{
         float: none;
         overflow: hidden;
-        display: flex;
+        display: none;
         flex-direction: column;
         max-height: 0;
     }
@@ -355,6 +355,7 @@ hr{
         cursor: pointer;
     }
     input:checked ~ .nav__menu {
+        display: flex;
         max-height: 300px;
     }
     .header{
