--- a/0705.css
+++ b/0705.css
@@ -96,7 +96,7 @@
     border-radius: 50px;
     background-color: white;
     color: black;
-    width: 200px;
+    width: 210px;
     height: 70px;
     display: flex;
     flex-direction: column;
@@ -112,15 +112,18 @@
 .header__container__button__span{
     margin: 0 20px 0 0;
     font-weight: 100;
-    font-size: x-small;
+    font-size: 13px;
     margin: 0;
     color: rgba(96,96,96,1);
 }
 .header__container__button__span--b{
     color: rgba(96,96,96,1);
+    font-size: 25px;
     font-weight: bold;
 }
-
+.header__container__button__span--app{
+    font-size: 22px;
+}
 .header__container{
     display: flex;
 }
