--- a/BS版/index.css
+++ b/BS版/index.css
@@ -26,12 +26,9 @@
 }
 
 .header__button{
-    border-radius: 50px;
     border:1px solid gray;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 60px;
-    width: 200px;
     font-size: smaller;
     padding: 5px 10px;
     margin:0 10px;
@@ -43,18 +40,6 @@
 .row__button{
     margin: 0 0 100px 0;
 }
-.div__button{
-    display: flex;
-    border-radius: 50px;
-    border:1px solid rgb(195, 195, 195);
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 70px;
-    padding: 10px;
-    margin: 10px;
-    background: linear-gradient(to bottom, rgba(252,252,252,1), rgba(209,238,255,1));
-    box-shadow: 2px 4px 6px 0px rgba(192, 192, 192, 0.527);
-}
 .footer{
     background-color: rgba(124,124,124,1);
     color: white;
@@ -65,7 +50,7 @@
 .footer__nav__li__a__span{
     color: white;
     border-right: 1px solid rgba(211,211,211,1);
-    padding: 0 20px 0 0px;
+    padding: 0 10px 0 0px;
 }
 .card{
     padding: 0;
@@ -85,15 +70,11 @@
     right: 0;
     display: block;
     padding: 0;
-    bottom:10%;
+    bottom:0;
 }
 .content__fixbutton__top{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
     border:1px solid rgb(192, 192, 192);
     box-shadow: 1px 3px 6px 0px rgba(192, 192, 192, 0.527);
-    padding: 10px;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -140,8 +121,13 @@
     color:rgb(255, 255, 255);
 }
 .div__button{
-    height: 100px;
-    min-width: 350px;
+    display: flex;
+    border:1px solid rgb(195, 195, 195);
+    flex-wrap: wrap;
+    flex-direction: row;
+    background: linear-gradient(to bottom, rgba(252,252,252,1), rgba(209,238,255,1));
+    box-shadow: 2px 4px 6px 0px rgba(192, 192, 192, 0.527);
+    
 }
 .up{
     transform: rotate(0deg) !important;
@@ -159,15 +145,11 @@
     width: 50px;
 }
 .div__button__img{
-    border-right: 1px solid gray;
+    border-right: 1px solid rgb(161, 161, 161);
     padding: 0 15px;
-    width: 100px;
 }
 .div{
     margin-top: -30px;
-}
-.header__button__img{
-    width: 46px;
 }
 .logo__img{
     width: 140px;
@@ -175,4 +157,8 @@
 }
 .active__cardbody__small{
     color: rgba(88,164,239,1);
+}
+.content__fixbutton__a{
+    color: black;
+    text-decoration:none;
 }
